tests/models/snapshots/records/can_find_all_record_type_query@health.snap
---
source: tests/models/health_records.rs
assertion_line: 59
expression: result
---
Ok(
    [
        HealthRecordResponse {
            id: 101,
            animal_pid: b2bd6270-8bec-42ce-99ff-d0eb1a076221,
            animal_name: "Daisy",
            animal_tag_id: "AC001",
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            condition: "fever",
            severity: "medium",
            status: "recovering",
            record_date: 2024-09-08,
            description: "Daisy suffered from East coast fever",
            treatment: Some(
                "Antibiotics and vitamins administered by injection",
            ),
            medicine: Some(
                "Amoxillin",
            ),
            dosage: Some(
                "450",
            ),
            cost: Some(
                1650.00,
            ),
            performed_by: Some(
                "John Artz",
            ),
            notes: None,
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            prognosis: Some(
                "East coast fever",
            ),
            created_by_name: "John Doe",
            created_at: 2024-09-08T11:15:00+00:00,
            updated_at: 2024-09-08T11:15:00+00:00,
        },
        HealthRecordResponse {
            id: 102,
            animal_pid: 62197c29-a2dd-4591-a4d0-92f6d7099760,
            animal_name: "Buttercup",
            animal_tag_id: "AC002",
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            condition: "fever",
            severity: "high",
            status: "recovered",
            record_date: 2024-12-12,
            description: "Buttercup suffered from milk fever",
            treatment: Some(
                "Suppliments and vitamins administered by IV fluid injection",
            ),
            medicine: Some(
                "Calcium rich suppliments",
            ),
            dosage: Some(
                "250",
            ),
            cost: Some(
                1850.00,
            ),
            performed_by: Some(
                "John Artz",
            ),
            notes: None,
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            prognosis: Some(
                "Milk fever",
            ),
            created_by_name: "John Doe",
            created_at: 2024-12-12T11:15:00+00:00,
            updated_at: 2024-12-12T11:15:00+00:00,
        },
        HealthRecordResponse {
            id: 103,
            animal_pid: d909e761-36da-4062-ae78-abba4f7c1103,
            animal_name: "Ferdinand",
            animal_tag_id: "AC003",
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            condition: "fever",
            severity: "high",
            status: "recovered",
            record_date: 2024-11-28,
            description: "Ferdinand suffered from East coast fever",
            treatment: Some(
                "Antibiotics and vitamins administered by injection",
            ),
            medicine: Some(
                "Amoxillin",
            ),
            dosage: Some(
                "650",
            ),
            cost: Some(
                1750.00,
            ),
            performed_by: Some(
                "John Artz",
            ),
            notes: None,
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            prognosis: Some(
                "East coast fever",
            ),
            created_by_name: "John Doe",
            created_at: 2024-11-28T11:15:00+00:00,
            updated_at: 2024-11-28T11:15:00+00:00,
        },
    ],
)
