tests/models/snapshots/records/can_find_by_date@health.snap
---
source: tests/models/health_records.rs
assertion_line: 102
expression: result
---
Ok(
    [
        HealthRecord {
            id: 101,
            animal_pid: b2bd6270-8bec-42ce-99ff-d0eb1a076221,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            record_type: "treatment",
            record_date: 2024-09-08,
            description: "Daisy suffered from East cost fever",
            treatment: Some(
                "Antibiotics and vitamins administered by injection",
            ),
            medicine: Some(
                "Amoxillin",
            ),
            dosage: Some(
                "450",
            ),
            cost: Some(
                1650.00,
            ),
            performed_by: Some(
                "John Artz",
            ),
            notes: None,
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-09-08T11:15:00+00:00,
            updated_at: 2024-09-08T11:15:00+00:00,
        },
        HealthRecord {
            id: 103,
            animal_pid: d909e761-36da-4062-ae78-abba4f7c1103,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            record_type: "treatment",
            record_date: 2024-11-28,
            description: "Ferdinand suffered from East cost fever",
            treatment: Some(
                "Antibiotics and vitamins administered by injection",
            ),
            medicine: Some(
                "Amoxillin",
            ),
            dosage: Some(
                "650",
            ),
            cost: Some(
                1750.00,
            ),
            performed_by: Some(
                "John Artz",
            ),
            notes: None,
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-11-28T11:15:00+00:00,
            updated_at: 2024-11-28T11:15:00+00:00,
        },
    ],
)
