tests/models/snapshots/records/can_find_by_id@weight.snap
---
source: tests/models/weight.rs
assertion_line: 78
expression: results
---
Ok(
    WeightResponse {
        id: 115,
        organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
        organisation_name: "Acme Corp",
        animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
        animal_name: "Rose",
        animal_tag_id: "AC007",
        mass: 545.00,
        unit: "kg",
        previous_mass: 500.00,
        status: "normal",
        record_date: 2025-06-10,
        notes: Some(
            "Two months post yearling weight",
        ),
        created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
        created_by_name: "John Doe",
        created_at: 2024-04-10T07:15:00+00:00,
        updated_at: 2024-04-10T07:15:00+00:00,
    },
)
